Desktop layout: mobile panel centered with blurred sides, fixed UI scaling, toast centering, colored button shadows

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,4 +11,6 @@ body {
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #0d0d0d;
+  overflow-x: hidden;
 }
